--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: |
 owner: Royal Cat Sitting # or company name
 first_published: 2023 # if migrating another site, the year of your first publish
 email: your-email@domain.com
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/jekyll-demo" # the subpath of your site, e.g. /blog
 url: "https://www.larmor.com/jekyll-demo/" # the base hostname & protocol for your site
 social:
   twitter: https://twitter.com/<username>
